--- a/.github/workflows/python_publish.yaml
+++ b/.github/workflows/python_publish.yaml
@@ -51,6 +51,14 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: bash ./scripts/dist.sh
 
+    - name: Upload files to a GitHub release
+      uses: svenstaro/upload-release-action@2.7.0
+      with:
+        file: ./dist/tessie_api-${{ env.VERSION }}.tar.gz
+        tag: ${{ env.VERSION }}
+        overwrite: true
+        release_name: Release of ${{ env.VERSION }}
+
     - name: Create a GitHub Release
       uses: actions/create-release@v1
       env:
