--- a/.github/workflows/python_publish.yaml
+++ b/.github/workflows/python_publish.yaml
@@ -40,10 +40,6 @@ jobs:
       run: bash ./scripts/dist.sh
       
     - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/tessie_api-${{ github.ref_name }}.tar.gz
-        asset_content_type: application/gzip
+        files: ./dist/tessie_api-${{ github.ref_name }}.tar.gz
